[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scense/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scense/Kato.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileSets/WorldTileset.tres" type="TileSet" id=3]
[ext_resource path="res://TileSets/PassThroughTileset.tres" type="TileSet" id=4]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=5]
[ext_resource path="res://Assets/boss/pugers.png" type="Texture" id=6]
[ext_resource path="res://Assets/boss/pugerslick.png" type="Texture" id=7]
[ext_resource path="res://Assets/boss/179386.png" type="Texture" id=8]
[ext_resource path="res://Assets/background/cloud1.png" type="Texture" id=9]
[ext_resource path="res://Assets/background/trees.png" type="Texture" id=10]
[ext_resource path="res://Assets/background/nieb04stars.png" type="Texture" id=11]
[ext_resource path="res://Assets/DynimicFonts/DynamicFontUpgrade.tres" type="DynamicFont" id=12]
[ext_resource path="res://Assets/sounds/pepSound1.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/sounds/jingles_PIZZA07.ogg" type="AudioStream" id=14]
[ext_resource path="res://Assets/sounds/minimize_001.ogg" type="AudioStream" id=15]
[ext_resource path="res://Assets/music/tyrant-by-kevin-macleod-from-filmmusic-io.mp3" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "tounge_in",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "tounge_out",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 99.5, 80 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 384 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 763, 69 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 16 ), Vector2( 55.9999, 45 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Boss/TileMap:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.282353, 0.709804, 0.105882, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("../Boss/TileMap:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.282353, 0.709804, 0.105882, 0 ), Color( 0.282353, 0.709804, 0.105882, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 384 )

[node name="Boss" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1740, 1240 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Sky"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
centered = false

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.2, 0.2 )
motion_offset = Vector2( 0, -1000 )
motion_mirroring = Vector2( 1740, 942 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Clouds"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
centered = false

[node name="Drzewa" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_offset = Vector2( 0, -350 )
motion_mirroring = Vector2( 3436, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Drzewa"]
texture = ExtResource( 10 )
centered = false

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="TileSolid" type="TileMap" parent="."]
modulate = Color( 0.282353, 0.709804, 0.105882, 1 )
tile_set = ExtResource( 3 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -65537, 1610612736, 0, -131072, 1610612736, 0, -131071, 1610612736, 0, -131070, 1610612736, 0, -131069, 1610612736, 0, -131068, 1610612736, 0, -131067, 1610612736, 0, -131066, 1610612736, 0, -131065, 1610612736, 0, -131064, 1610612736, 0, -131063, 1610612736, 0, -131062, 1610612736, 0, -131061, 1610612736, 0, -131060, 1610612736, 0, -131059, 1610612736, 0, -131058, 1610612736, 0, -131057, 1610612736, 0, -131056, 1610612736, 0, -1, 0, 0, -65536, 1610612753, 0, -65535, 1610612760, 0, -65534, 1610612760, 0, -65533, 1610612760, 0, -65532, 1610612760, 0, -65531, 1610612760, 0, -65530, 1610612760, 0, -65529, 1610612760, 0, -65528, 1610612760, 0, -65527, 1610612760, 0, -65526, 1610612760, 0, -65525, 1610612760, 0, -65524, 1610612760, 0, -65523, 1610612760, 0, -65522, 1610612760, 0, -65521, 1610612752, 0, -65520, 0, 0, 65535, 0, 0, 16, 0, 0, 131071, 0, 0, 65552, 0, 0, 196607, 0, 0, 131088, 0, 0, 262143, 0, 0, 196624, 0, 0, 327679, 0, 0, 262160, 0, 0, 393215, 0, 0, 327696, 0, 0, 458751, 0, 0, 393232, 0, 0, 524287, 0, 0, 458752, 24, 0, 458753, 24, 0, 458754, 24, 0, 458755, 24, 0, 458756, 24, 0, 458757, 24, 0, 458758, 3, 0, 458768, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524304, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 16, 0, 589832, 24, 0, 589833, 3, 0, 589840, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 16, 0, 786443, 24, 0, 786444, 24, 0 )

[node name="TileOneWay" type="TileMap" parent="." groups=["one_way"]]
modulate = Color( 0.113725, 0.596078, 0.129412, 1 )
tile_set = ExtResource( 4 )
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( -65519, 1610612738, 0, -65518, 1610612738, 0, -65517, 1610612738, 0, -65516, 1610612738, 0, -65515, 1610612738, 0, -65514, 1610612738, 0, -65513, 1610612738, 0, -65512, 1610612738, 0, -65511, 1610612738, 0, -65510, 1610612738, 0, -65509, 1610612738, 0, -65508, 1610612738, 0, -65507, 1610612738, 0, -65506, 1610612738, 0, -65505, 1610612738, 0, -65504, 1610612738, 0, -65503, 1610612738, 0, -65502, 1610612738, 0, -65501, 1610612738, 0, -65500, 1610612738, 0, -65499, 1610612738, 0, -65498, 1610612738, 0, -65497, 1610612738, 0, -65496, 1610612738, 0, -65495, 1610612738, 0, 196627, 1, 0, 196628, 2, 0, 196629, 2, 0, 196630, 2, 0, 196631, 3, 0, 196635, 1, 0, 196636, 2, 0, 196637, 2, 0, 196638, 2, 0, 196639, 3, 0, 393237, 1, 0, 393238, 2, 0, 393239, 2, 0, 393240, 2, 0, 393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 3, 0, 589843, 1, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 3, 0, 589851, 1, 0, 589852, 2, 0, 589853, 2, 0, 589854, 2, 0, 589855, 3, 0, 786442, 7, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 0, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 786464, 2, 0, 786465, 2, 0, 786466, 2, 0, 786467, 2, 0, 786468, 2, 0, 786469, 2, 0, 786470, 2, 0, 786471, 2, 0, 786472, 2, 0, 786473, 2, 0 )

[node name="Boss" type="Area2D" parent="."]
position = Vector2( 2469, 379 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Boss"]
position = Vector2( 763, 69 )
scale = Vector2( 1.22004, 1.22004 )
frames = SubResource( 1 )
animation = "tounge_out"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2( -97.5, 213 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="Boss"]
wait_time = 0.2

[node name="BefriendTimer" type="Timer" parent="Boss"]
wait_time = 30.0
one_shot = true

[node name="RayCastDown" type="RayCast2D" parent="Boss"]
position = Vector2( -232, 350 )
enabled = true
cast_to = Vector2( -1140, 0 )

[node name="RayCastUp" type="RayCast2D" parent="Boss"]
position = Vector2( -233, -227 )
enabled = true
cast_to = Vector2( -1140, 0 )

[node name="RayCastSecondUp" type="RayCast2D" parent="Boss"]
position = Vector2( -233, -34 )
enabled = true
cast_to = Vector2( -1140, 0 )

[node name="RayCastSecondDown" type="RayCast2D" parent="Boss"]
position = Vector2( -239, 159 )
enabled = true
cast_to = Vector2( -1140, 0 )

[node name="HurtTimer" type="Timer" parent="Boss"]

[node name="BossActivation" type="Area2D" parent="Boss"]
position = Vector2( -2469, -379 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/BossActivation"]
position = Vector2( 2016, 384 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boss"]
anims/RESET = SubResource( 4 )
anims/show = SubResource( 5 )

[node name="ShowTimer" type="Timer" parent="Boss"]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Boss"]
root_node = NodePath("../../BossWall")
anims/RESET = SubResource( 7 )
anims/close = SubResource( 8 )

[node name="TileMap" type="TileMap" parent="Boss"]
modulate = Color( 0.282353, 0.709804, 0.105882, 0 )
position = Vector2( -2469, -379 )
tile_set = ExtResource( 3 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 655376, 0, 0, 720912, 0, 0 )

[node name="BeforAttackTimerTimer" type="Timer" parent="Boss"]
wait_time = 0.2

[node name="SpriteA2" type="Sprite" parent="Boss"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -318, 314 )
scale = Vector2( 0.191406, 0.191406 )
texture = ExtResource( 8 )

[node name="SpriteA1" type="Sprite" parent="Boss"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -318, -269 )
scale = Vector2( 0.191406, 0.191406 )
texture = ExtResource( 8 )

[node name="SpriteA22" type="Sprite" parent="Boss"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -318, -66 )
scale = Vector2( 0.191406, 0.191406 )
texture = ExtResource( 8 )

[node name="SpriteA12" type="Sprite" parent="Boss"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -318, 118 )
scale = Vector2( 0.191406, 0.191406 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Boss"]
visible = false
margin_left = -933.0
margin_top = -27.0
margin_right = -165.0
margin_bottom = 215.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
text = "Really big dog attacks you, he is very fat, looks like he might want your bread, but will he survive eating it?"
align = 1
valign = 1
autowrap = true

[node name="SoundHurt" type="AudioStreamPlayer" parent="Boss"]
stream = ExtResource( 13 )
volume_db = 10.0
bus = "Effects"

[node name="SoundShow" type="AudioStreamPlayer" parent="Boss"]
stream = ExtResource( 14 )
bus = "Effects"

[node name="SoundAttack" type="AudioStreamPlayer" parent="Boss"]
stream = ExtResource( 15 )
volume_db = -12.0
bus = "Effects"

[node name="Kato" parent="." instance=ExtResource( 2 )]
position = Vector2( 205, 396 )

[node name="Camera2D" type="Camera2D" parent="Kato"]
current = true
limit_left = 0
limit_top = -64
limit_right = 3000
limit_bottom = 832
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 12.0
editor_draw_limits = true

[node name="BossWall" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossWall"]
position = Vector2( 2160, 384 )
shape = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
autoplay = true
bus = "Music"

[connection signal="body_entered" from="Boss" to="Boss" method="_on_Boss_body_entered"]
[connection signal="timeout" from="Boss/Timer" to="Boss" method="_on_Timer_timeout"]
[connection signal="timeout" from="Boss/BefriendTimer" to="Boss" method="_on_BefriendTimer_timeout"]
[connection signal="timeout" from="Boss/HurtTimer" to="Boss" method="_on_HurtTimer_timeout"]
[connection signal="body_entered" from="Boss/BossActivation" to="Boss" method="_on_BossActivation_body_entered"]
[connection signal="timeout" from="Boss/ShowTimer" to="Boss" method="_on_ShowTimer_timeout"]
[connection signal="timeout" from="Boss/BeforAttackTimerTimer" to="Boss" method="_on_BeforAttackTimerTimer_timeout"]
[connection signal="body_entered" from="BossWall" to="Kato" method="_on_BossWall_body_entered"]
